--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Anton&family=Inter:wght@400;700&family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css" />
   </head>
   <!-- endregion -->
-  <body>
+  <body id="home">
     <header class="header">
       <div class="header__top">
         <img src="./images/Logo.png" alt="Bose logo" />
@@ -30,27 +33,25 @@
         <img src="./images/Logo.png" alt="Bose logo" />
         <img src="./images/icon/Icon-Close.png" alt="Close" />
       </div>
-      <div class="menu__bottom">
-        <ul class="text-menu">
-          <li class="text">HOME</li>
-          <li class="text">RECOMMENDED</li>
-          <li class="text">CATEGORIES</li>
-          <li class="text">HOW TO BUY</li>
-        </ul>
-      </div>
+        <nav class="nav">
+          <a href="#home" class="nav__link">Home</a>
+          <a href="#recommended" class="nav__link">Recommended</a>
+          <a href="#categories" class="nav__link">Categories</a>
+          <a href="#how-to-buy" class="nav__link">How to buy</a>
+        </nav>
     </div>
     <main>
-      <section>
+      <section id="recommended">
         <h2>Recommended</h2>
       </section>
-      <section>
+      <section id="categories">
         <h2>
           Browse Bose
           <br />
           products by category
         </h2>
       </section>
-      <section>
+      <section id="how-to-buy">
         <h2>
           Why buy direct
           <br />
