--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Anton&family=Inter:wght@400;700&family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Anton&family=Inter:wght@400;700:800&family=Open+Sans&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./style.css" />
   </head>
   <!-- endregion -->
@@ -15,44 +18,82 @@
     <header class="header">
       <div class="header__top">
         <img src="./images/Logo.png" alt="Bose logo" />
-        <img src="./images/icon/Icon-Burger-menu.png" alt="Burger menu" />
+        <a href="#menu">
+          <img src="./images/icon/Icon-Burger-menu.png" alt="Burger menu" />
+        </a>
       </div>
 
       <div class="header__bottom">
         <img src="./images/Sound waves.png" alt="Sound waves" />
 
-        <h1>
+        <h1 class="header__title">
           The world shades
           <br />
           Your music shines
         </h1>
       </div>
     </header>
-    <div class="menu">
+    <div class="menu" id="menu">
       <div class="menu__top">
         <img src="./images/Logo.png" alt="Bose logo" />
-        <img src="./images/icon/Icon-Close.png" alt="Close" />
+        <a href="#home">
+          <img src="./images/icon/Icon-Close.png" alt="Close" />
+        </a>
       </div>
-        <nav class="nav">
-          <a href="#home" class="nav__link">Home</a>
-          <a href="#recommended" class="nav__link">Recommended</a>
-          <a href="#categories" class="nav__link">Categories</a>
-          <a href="#how-to-buy" class="nav__link">How to buy</a>
-        </nav>
+      <nav class="nav">
+        <a href="#home" class="nav__link">Home</a>
+        <a href="#recommended" class="nav__link">Recommended</a>
+        <a href="#categories" class="nav__link">Categories</a>
+        <a href="#how-to-buy" class="nav__link">How to buy</a>
+      </nav>
     </div>
-    <main>
-      <section id="recommended">
-        <h2>Recommended</h2>
+    <main class="main">
+      <section class="recommended" id="recommended">
+        <h2 class="recommended__title">Recommended</h2>
+        <div class="recommended__products">
+          <article class="product">
+            <img
+              src="./images/products/Bose portable Smart speaker.png"
+              alt="Bose portable Smart speaker"
+              class="product__photo"
+            />
+            <h3 class="product__title">Bose portable Smart speaker</h3>
+            <p class="product__category">Smart home</p>
+            <p class="product__price">$ 399.00</p>
+          </article>
+          <article class="product">
+            <img
+              src="./images/products/SoundLink Flex Bluetooth speaker.png"
+              alt="SoundLink Flex Bluetooth speaker"
+              class="product__photo"
+            />
+            <h3 class="product__title">SoundLink Flex Bluetooth speaker</h3>
+            <p class="product__category">Portable bluetooth</p>
+            <p class="product__price">$ 149.00</p>
+          </article>
+          <article class="product">
+            <img
+              src="./images/products/SoundLink Color Bluetooth speaker II.png"
+              alt="SoundLink Color Bluetooth speaker II"
+              class="product__photo"
+            />
+            <h3 class="product__title">SoundLink Color Bluetooth speaker II</h3>
+            <p class="product__category">Portable bluetooth</p>
+            <p class="product__price">$ 129.00</p>
+          </article>
+        </div>
       </section>
+
       <section id="categories">
-        <h2>
+        <h2 class="categories__title">
           Browse Bose
           <br />
           products by category
         </h2>
       </section>
+
       <section id="how-to-buy">
-        <h2>
+        <h2 class="how-to-buy__title">
           Why buy direct
           <br />
           from Bose
