--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body id="home">
     <header class="header">
       <div class="header__top">
-        <img src="./images/Logo.png" alt="Bose logo" />
+        <img src="./images/Logo.png" alt="Bose logo" class="logo" />
         <a href="#menu">
           <img src="./images/icon/Icon-Burger-menu.png" alt="Burger menu" />
         </a>
@@ -35,7 +35,7 @@
     </header>
     <div class="menu" id="menu">
       <div class="menu__top">
-        <img src="./images/Logo.png" alt="Bose logo" />
+        <img src="./images/Logo.png" alt="Bose logo" class="logo" />
         <a href="#home">
           <img src="./images/icon/Icon-Close.png" alt="Close" />
         </a>
